--- a/Qr-sustainability-mobile-ui.html
+++ b/Qr-sustainability-mobile-ui.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EcoTextile QR Scan Result</title>
+    <title>Kết quả quét QR - EcoTextile</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
     <style>
         :root {
@@ -140,35 +140,35 @@
         <img src="https://n7media.coolmate.me/uploads/February2025/ao-thun-nam-cotton-220gsm-mau-nau-cappuccino_(7).jpg"
             alt="shirt">
         <div>
-            <div class="title"> Coolmate Eco Minimal Tee</div>
-            <div class="sub">SKU: EMT-241 | Verified by EcoTextil</div>
+            <div class="title">Coolmate Eco Minimal Tee</div>
+            <div class="sub">SKU: EMT-241 | Đã được xác minh bởi EcoTextile</div>
         </div>
     </div>
 
     <div class="card">
-        <div class="title">Sustainability Score</div>
-        <div class="sub">Evaluated across emissions, materials, and traceability</div>
-        <span class="badge">A+ Certified</span>
+        <div class="title">Điểm bền vững</div>
+        <div class="sub">Đánh giá dựa trên phát thải, vật liệu và khả năng truy xuất nguồn gốc</div>
+        <span class="badge">Chứng nhận A+</span>
 
         <div class="metrics">
             <div class="metric">
                 <h2>1.2 kg</h2>
-                <p>CO₂ Impact</p>
+                <p>Tác động CO₂</p>
             </div>
             <div class="metric">
                 <h2>18 L</h2>
-                <p>Water Saved</p>
+                <p>Lượng nước tiết kiệm</p>
             </div>
             <div class="metric">
                 <h2>25%</h2>
-                <p>Recycled Fiber</p>
+                <p>Sợi tái chế</p>
             </div>
         </div>
     </div>
 
     <div class="card">
-        <div class="title">Product Journey</div>
-        <div class="sub">Transparent supply chain, verifiable by blockchain</div>
+        <div class="title">Hành trình sản phẩm</div>
+        <div class="sub">Chuỗi cung ứng minh bạch, có thể xác minh bằng blockchain</div>
         <div class="journey">
             <div class="journey-step">
                 <div class="dot"></div>Organic bamboo farm — Quảng Nam
@@ -186,13 +186,13 @@
     </div>
 
     <div class="card">
-        <div class="title">Care & End‑of‑Life</div>
+        <div class="title">Bảo quản & Kết thúc vòng đời</div>
         <ul class="sub">
-            <li>Cold wash — lower CO₂</li>
-            <li>Natural air dry</li>
-            <li>Recycle / return program available</li>
+            <li>Giặt lạnh — giảm CO₂</li>
+            <li>Phơi tự nhiên</li>
+            <li>Có chương trình tái chế / trả lại</li>
         </ul>
-        <button class="btn">Verify Blockchain Record</button>
+        <button class="btn">Xác minh bản ghi trên blockchain</button>
     </div>
 
 </body>
