--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EcoTextile Sustain-Tech Dashboard</title>
+    <title>Bảng điều khiển EcoTextile - Công nghệ bền vững</title>
 
     <!-- ✅ Heroicons (SVG version that works) -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -18,76 +18,76 @@
     <nav class="sidebar">
         <div>
             <h1>EcoTextile</h1>
-            <span>Sustain-Tech Platform</span>
+            <span>Nền tảng Công nghệ Bền vững</span>
         </div>
         <div class="nav">
-            <a href="index.html" class="active"><i data-feather="bar-chart-2"></i>Dashboard</a>
-            <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
-            <a href="suppliers.html"><i data-feather="truck"></i>Suppliers</a>
-            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
-            <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Fabric Optimization</a>
-            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
-            <a href="setting.html"><i data-feather="settings"></i>Settings</a>
+            <a href="index.html" class="active"><i data-feather="bar-chart-2"></i>Bảng điều khiển</a>
+            <a href="inventory.html"><i data-feather="archive"></i>Kho</a>
+            <a href="suppliers.html"><i data-feather="truck"></i>Nhà cung cấp</a>
+            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Trợ lý thiết kế</a>
+            <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Tối ưu vải</a>
+            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Phân tích xu hướng</a>
+            <a href="setting.html"><i data-feather="settings"></i>Cài đặt</a>
         </div>
     </nav>
 
     <main class="main">
         <header>
-            <h2>Transparency Dashboard</h2>
-            <p>Real-time data for EcoTextile’s sustainable supply chain (Project: Neighbor’s KIDS)</p>
+            <h2>Bảng minh bạch</h2>
+            <p>Dữ liệu thời gian thực cho chuỗi cung ứng bền vững của EcoTextile (Đơn vị: THPT Nguyễn Công Trứ)</p>
         </header>
 
         <!-- KPI GRID -->
         <section class="kpi-grid">
             <div class="kpi-card">
                 <div class="kpi-card-header">
-                    <h3>Fabric Waste Reduction (YTD)</h3>
+                    <h3>Giảm chất thải vải (1 năm qua)</h3>
                     <i data-feather="trending-down"></i>
                 </div>
                 <div class="kpi-value">
                     <span class="value">24.7</span><span class="unit">%</span>
                 </div>
-                <p class="kpi-meta">Target: 20–30% Reduction</p>
+                <p class="kpi-meta">Mục tiêu: Giảm 20–30%</p>
             </div>
 
             <div class="kpi-card">
                 <div class="kpi-card-header">
-                    <h3>Avg. Carbon Footprint / Product</h3>
+                    <h3>Trung bình phát thải CO₂ / Sản phẩm</h3>
                     <i data-feather="cloud"></i>
                 </div>
                 <div class="kpi-value">
                     <span class="value">8.2</span><span class="unit"> kg CO₂</span>
                 </div>
-                <p class="kpi-meta">vs. 11.5 kg (Industry Avg.)</p>
+                <p class="kpi-meta">so với 11.5 kg (Trung bình ngành)</p>
             </div>
 
             <div class="kpi-card">
                 <div class="kpi-card-header">
-                    <h3>Traceability Score</h3>
+                    <h3>Điểm truy xuất nguồn gốc</h3>
                     <i data-feather="shield"></i>
                 </div>
                 <div class="kpi-value">
                     <span class="value">100</span><span class="unit">%</span>
                 </div>
-                <p class="kpi-meta">Verified via Open Data Ledger</p>
+                <p class="kpi-meta">Đã xác minh qua Sổ cái Dữ liệu Mở</p>
             </div>
 
             <div class="kpi-card">
                 <div class="kpi-card-header">
-                    <h3>Inventory Resale Rate</h3>
+                    <h3>Tỷ lệ bán lại tồn kho</h3>
                     <i data-feather="dollar-sign"></i>
                 </div>
                 <div class="kpi-value">
                     <span class="value">18.5</span><span class="unit">%</span>
                 </div>
-                <p class="kpi-meta">Deadstock inventory resold/upcycled</p>
+                <p class="kpi-meta">Tồn kho chết được bán lại/ứng dụng tái chế</p>
             </div>
         </section>
 
         <!-- CHART & WORKFLOW -->
         <section class="chart-grid">
             <div class="chart-card">
-                <h3>Carbon Footprint (YTD)</h3>
+                <h3>Phát thải CO₂ (Năm đến nay)</h3>
                 <div class="bar-chart" id="barChart">
                     <div class="bar" style="height: 35%;" title="Jan"></div>
                     <div class="bar" style="height: 55%;" title="Feb"></div>
@@ -99,27 +99,27 @@
             </div>
 
             <div class="chart-card">
-                <h3>Recycling Workflow (A3)</h3>
+                <h3>Quy trình tái chế (A3)</h3>
                 <ul class="workflow-list">
                     <li class="workflow-item">
                         <div class="workflow-icon"><i data-feather="alert-triangle"></i></div>
                         <div>
-                            <h4>Inventory Aging Alert</h4>
-                            <p>Lot #22B (Cotton) > 90 days</p>
+                            <h4>Cảnh báo tồn kho cũ</h4>
+                            <p>Lô #22B (Cotton) > 90 ngày</p>
                         </div>
                     </li>
                     <li class="workflow-item">
                         <div class="workflow-icon"><i data-feather="lightbulb"></i></div>
                         <div>
-                            <h4>AI Suggestion: Resale</h4>
-                            <p>Match found: SME "VinaCraft"</p>
+                            <h4>Gợi ý AI: Bán lại</h4>
+                            <p>Tìm thấy đối tác phù hợp: SME "VinaCraft"</p>
                         </div>
                     </li>
                     <li class="workflow-item">
                         <div class="workflow-icon"><i data-feather="check-circle"></i></div>
                         <div>
-                            <h4>Action: Waste Reduced</h4>
-                            <p>Saved 250kg of fabric waste</p>
+                            <h4>Hành động: Giảm chất thải</h4>
+                            <p>Tiết kiệm 250kg chất thải vải</p>
                         </div>
                     </li>
                 </ul>
