--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login | Inventory System</title>
+  <title>Đăng nhập | Hệ thống Kho</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     .login-container {
@@ -42,10 +42,10 @@
 <body>
   <div class="login-container">
     <div class="login-box">
-      <h2>Welcome Back</h2>
-      <input type="text" id="username" placeholder="Username" />
-      <input type="password" id="password" placeholder="Password" />
-      <button onclick="login()">Login</button>
+      <h2>Chào mừng trở lại</h2>
+      <input type="text" id="username" placeholder="Tên đăng nhập" />
+      <input type="password" id="password" placeholder="Mật khẩu" />
+      <button onclick="login()">Đăng nhập</button>
     </div>
   </div>
 
@@ -53,7 +53,7 @@
     function login() {
       const user = document.getElementById("username").value.trim();
       const pass = document.getElementById("password").value.trim();
-      if (!user || !pass) return alert("Please fill in all fields!");
+      if (!user || !pass) return alert("Vui lòng điền đầy đủ thông tin!");
       localStorage.setItem("currentUser", JSON.stringify({ username: user }));
       window.location.href = "inventory.html";
     }
