--- a/mockup-fabric-analysis.html
+++ b/mockup-fabric-analysis.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Fabric Analyst | EcoTextile Sustain-Tech</title>
+    <title>Phân tích vải AI | EcoTextile</title>
 
     <script src="https://unpkg.com/feather-icons"></script>
 
@@ -18,33 +18,32 @@
     <nav class="sidebar">
         <div>
             <h1>EcoTextile</h1>
-            <span>Sustain-Tech Platform</span>
+            <span>Nền tảng Công nghệ Bền vững</span>
         </div>
         <div class="nav">
-            <a href="index.html"><i data-feather="bar-chart-2"></i>Dashboard</a>
-            <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
-            <a href="suppliers.html"><i data-feather="truck"></i>Suppliers</a>
-            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
-            <a href="mockup-fabric-analysis.html" class="active"><i data-feather="layers"></i>Fabric Optimization</a>
-            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
-            <a href="setting.html"><i data-feather="settings"></i>Settings</a>
+            <a href="index.html"><i data-feather="bar-chart-2"></i>Bảng điều khiển</a>
+            <a href="inventory.html"><i data-feather="archive"></i>Kho</a>
+            <a href="suppliers.html"><i data-feather="truck"></i>Nhà cung cấp</a>
+            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Trợ lý thiết kế</a>
+            <a href="mockup-fabric-analysis.html" class="active"><i data-feather="layers"></i>Tối ưu vải</a>
+            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Phân tích xu hướng</a>
+            <a href="setting.html"><i data-feather="settings"></i>Cài đặt</a>
         </div>
     </nav>
 
     <!-- MAIN CONTENT -->
     <main class="main">
         <div class="panel">
-            <h2><i data-feather="activity"></i> AI Fabric Optimization</h2>
-            <p style="color: #393E46; font-style:italic">Performance and environmental metric analysis for sustainable
-                materials.</p>
+            <h2><i data-feather="activity"></i> Tối ưu vải AI</h2>
+            <p style="color: #393E46; font-style:italic">Phân tích hiệu suất và chỉ số môi trường cho vật liệu bền vững.</p>
 
             <div class="analysis-grid">
                 <!-- LEFT SIDE -->
                 <div>
-                    <h3 style="color: #393E46; margin-top: 0;">Performance Metrics (Cotton Batch #45)</h3>
+                    <h3 style="color: #393E46; margin-top: 0;">Chỉ số hiệu suất (Lô bông #45)</h3>
 
                     <div class="metric-item">
-                        <div>Durability & Longevity</div>
+                        <div>Độ bền & Tuổi thọ</div>
                         <div><b>92%</b></div>
                     </div>
                     <div class="score-bar">
@@ -52,7 +51,7 @@
                     </div>
 
                     <div class="metric-item">
-                        <div>Recyclability Potential</div>
+                        <div>Khả năng tái chế</div>
                         <div><b>88%</b></div>
                     </div>
                     <div class="score-bar">
@@ -60,7 +59,7 @@
                     </div>
 
                     <div class="metric-item">
-                        <div>Local Climate Suitability</div>
+                        <div>Phù hợp khí hậu địa phương</div>
                         <div><b>95%</b></div>
                     </div>
                     <div class="score-bar">
@@ -68,8 +67,8 @@
                     </div>
 
                     <div class="metric-item">
-                        <div>Microplastic Shedding Risk</div>
-                        <div style="font-weight: bold; color: green;">LOW</div>
+                        <div>Rủi ro ô nhiễm vi nhựa</div>
+                        <div style="font-weight: bold; color: green;">THẤP</div>
                     </div>
                 </div>
 
@@ -77,10 +76,10 @@
                 <div style="display: flex; align-items: center;">
                     <div class="recommendation" style="width: 100%;">
                         <i data-feather="lightbulb"></i>
-                        <h3>AI BEST CHOICE</h3>
-                        <span>Organic Bamboo</span>
-                        <p>Best for tropical climates with minimal pollution footprint.</p>
-                        <button>View Sourcing Data</button>
+                        <h3>LỰA CHỌN TỐT NHẤT (AI)</h3>
+                        <span>Bamboo hữu cơ</span>
+                        <p>Phù hợp cho khí hậu nhiệt đới với dấu chân ô nhiễm tối thiểu.</p>
+                        <button>Xem dữ liệu nguồn cung</button>
                     </div>
                 </div>
             </div>
