--- a/suppliers.html
+++ b/suppliers.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suppliers - Sustain-Tech</title>
+    <title>Nhà cung cấp - Công nghệ Bền vững</title>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="style.css">
 
@@ -56,105 +56,105 @@
     <nav class="sidebar">
         <div>
             <h1>EcoTextile</h1>
-            <span>Sustain-Tech Platform</span>
+            <span>Nền tảng Công nghệ Bền vững</span>
         </div>
         <div class="nav">
-            <a href="index.html"><i data-feather="bar-chart-2"></i>Dashboard</a>
-            <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
-            <a href="suppliers.html" class="active"><i data-feather="truck"></i>Suppliers</a>
-            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
-            <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Fabric Optimization</a>
-            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
-            <a href="#"><i data-feather="settings"></i>Settings</a>
+            <a href="index.html"><i data-feather="bar-chart-2"></i>Bảng điều khiển</a>
+            <a href="inventory.html"><i data-feather="archive"></i>Kho</a>
+            <a href="suppliers.html" class="active"><i data-feather="truck"></i>Nhà cung cấp</a>
+            <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Trợ lý thiết kế</a>
+            <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Tối ưu vải</a>
+            <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Phân tích xu hướng</a>
+            <a href="#"><i data-feather="settings"></i>Cài đặt</a>
         </div>
     </nav>
 
     <main class="main">
         <div class="panel">
-            <h2><i data-feather="truck"></i> Supplier Directory</h2>
-            <p>Verified sustainable partners in our supply chain.</p>
+            <h2><i data-feather="truck"></i> Danh bạ nhà cung cấp</h2>
+            <p>Đối tác bền vững đã được xác minh trong chuỗi cung ứng của chúng tôi.</p>
 
             <div class="supplier-grid">
                 <div class="supplier-card">
                     <h3>VinaTex Sustainable Fabrics</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Ho Chi Minh City, VN</p>
-                    <span class="tag">Recycled Cotton</span>
-                    <span class="tag">Organic Dyes</span>
+                    <span class="tag">Bông tái chế</span>
+                    <span class="tag">Thuốc nhuộm hữu cơ</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>EcoWeave Textiles</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Da Nang, VN</p>
-                    <span class="tag">Recycled Polyester</span>
+                    <span class="tag">Polyester tái chế</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>BaoMinh Packaging</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Binh Duong, VN</p>
-                    <span class="tag">FSC Certified Paper</span>
-                    <span class="tag">Biodegradable Bags</span>
+                    <span class="tag">Giấy chứng nhận FSC</span>
+                    <span class="tag">Túi phân hủy sinh học</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>GreenThread Logistics</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Singapore</p>
-                    <span class="tag">Carbon-Neutral Shipping</span>
+                    <span class="tag">Vận chuyển trung hòa carbon</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>SunFiber Textiles</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Hanoi, VN</p>
-                    <span class="tag">Organic Cotton</span>
-                    <span class="tag">Low-Water Dyeing</span>
+                    <span class="tag">Bông hữu cơ</span>
+                    <span class="tag">Nhuộm ít nước</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>BlueOcean Fabrics</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Ho Chi Minh City, VN</p>
-                    <span class="tag">Recycled Polyester</span>
-                    <span class="tag">Eco-Friendly Packaging</span>
+                    <span class="tag">Polyester tái chế</span>
+                    <span class="tag">Bao bì thân thiện môi trường</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>EcoPrint Solutions</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Da Nang, VN</p>
-                    <span class="tag">Waterless Printing</span>
-                    <span class="tag">Non-Toxic Inks</span>
+                    <span class="tag">In không dùng nước</span>
+                    <span class="tag">Mực không độc hại</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>GreenLeaf Packaging</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Binh Duong, VN</p>
-                    <span class="tag">Compostable Materials</span>
-                    <span class="tag">FSC Certified</span>
+                    <span class="tag">Vật liệu phân hủy thành phân</span>
+                    <span class="tag">Chứng nhận FSC</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>EcoThreads Co.</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Hue, VN</p>
-                    <span class="tag">Hemp Fabric</span>
-                    <span class="tag">Natural Dyes</span>
+                    <span class="tag">Vải gai dầu</span>
+                    <span class="tag">Thuốc nhuộm tự nhiên</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>SolarText Textiles</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Singapore</p>
-                    <span class="tag">Solar-Powered Factory</span>
-                    <span class="tag">Organic Cotton</span>
+                    <span class="tag">Nhà máy dùng năng lượng mặt trời</span>
+                    <span class="tag">Bông hữu cơ</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>BioWeave Materials</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Kuala Lumpur, MY</p>
-                    <span class="tag">Recycled Polyester</span>
-                    <span class="tag">Biodegradable Packaging</span>
+                    <span class="tag">Polyester tái chế</span>
+                    <span class="tag">Bao bì phân hủy sinh học</span>
                 </div>
 
                 <div class="supplier-card">
                     <h3>PureFiber Co.</h3>
                     <p><i data-feather="map-pin" style="width:12px;"></i> Bangkok, TH</p>
-                    <span class="tag">Organic Bamboo</span>
-                    <span class="tag">Low-Energy Production</span>
+                    <span class="tag">Tre hữu cơ</span>
+                    <span class="tag">Sản xuất tiêu thụ ít năng lượng</span>
                 </div>
 
             </div>
