--- a/setting.html
+++ b/setting.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Settings</title>
+  <title>Cài đặt</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
@@ -16,37 +16,37 @@
   <nav class="sidebar">
     <div>
       <h1>EcoTextile</h1>
-      <span>Sustain-Tech Platform</span>
+      <span>Nền tảng Công nghệ Bền vững</span>
     </div>
     <div class="nav">
-      <a href="index.html"><i data-feather="bar-chart-2"></i>Dashboard</a>
-      <a href="inventory.html"><i data-feather="archive"></i>Inventory</a>
-      <a href="suppliers.html"><i data-feather="truck"></i>Suppliers</a>
-      <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Design Assistant</a>
-      <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Fabric Optimization</a>
-      <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Trend Analyst</a>
-      <a href="setting.html" class="active"><i data-feather="settings"></i>Settings</a>
+      <a href="index.html"><i data-feather="bar-chart-2"></i>Bảng điều khiển</a>
+      <a href="inventory.html"><i data-feather="archive"></i>Kho</a>
+      <a href="suppliers.html"><i data-feather="truck"></i>Nhà cung cấp</a>
+      <a href="mockup-design-assistant.html"><i data-feather="cpu"></i>Trợ lý thiết kế</a>
+      <a href="mockup-fabric-analysis.html"><i data-feather="layers"></i>Tối ưu vải</a>
+      <a href="mockup-trend-analyzer.html"><i data-feather="trending-up"></i>Phân tích xu hướng</a>
+      <a href="setting.html" class="active"><i data-feather="settings"></i>Cài đặt</a>
     </div>
   </nav>
 
   <main class="main">
     <header>
-      <h2>Settings</h2>
-      <p>Manage your profile and preferences.</p>
+      <h2>Cài đặt</h2>
+      <p>Quản lý hồ sơ và tùy chọn của bạn.</p>
     </header>
 
     <section class="panel">
-      <h2><i data-feather="user"></i> User Info</h2>
-      <label>Username</label>
-      <input id="username" placeholder="Enter your username" style="padding:8px;width:100%;margin-bottom:10px;">
+      <h2><i data-feather="user"></i> Thông tin người dùng</h2>
+      <label>Tên đăng nhập</label>
+      <input id="username" placeholder="Nhập tên đăng nhập của bạn" style="padding:8px;width:100%;margin-bottom:10px;">
 
-      <label>Theme</label>
+      <label>Giao diện</label>
       <select id="theme" style="padding:8px;width:100%;margin-bottom:20px;">
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
+        <option value="light">Sáng</option>
+        <option value="dark">Tối</option>
       </select>
 
-      <button onclick="saveSettings()">Save</button>
+      <button onclick="saveSettings()">Lưu</button>
     </section>
   </main>
 
@@ -65,7 +65,7 @@
       const username = document.getElementById("username").value.trim();
       const theme = document.getElementById("theme").value;
       localStorage.setItem("currentUser", JSON.stringify({ username, theme }));
-      alert("Settings saved!");
+      alert("Đã lưu cài đặt!");
     }
     function logout() {
       localStorage.removeItem("currentUser");
