--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h3>Quy trình tái chế (A3)</h3>
                 <ul class="workflow-list">
                     <li class="workflow-item">
-                        <div class="workflow-icon"><i data-feather="alert-triangle"></i></div>
+                        <div class="workflow-iconn"><i data-feather="alert-triangle"></i></div>
                         <div>
                             <h4>Cảnh báo tồn kho cũ</h4>
                             <p>Lô #22B (Cotton) > 90 ngày</p>
