--- a/inventory.html
+++ b/inventory.html
@@ -11,14 +11,15 @@
     <style>
         /* ===== Imported Main Theme CSS (short core extract) ===== */
         :root {
-            --darkest: #222831;
-            --dark-gray: #393E46;
-            --taupe: #948979;
-            --light-beige: #DFD0B8;
-            --white: #FFFFFF;
-            --cream-bg: #F7F4EE;
-            --yellow-accent: #F4CE14;
-        }
+  --darkest: #1A2A3A;      /* primary dark */
+  --dark-gray: #243B53;    /* deep navy */
+  --taupe: #3E5C76;        /* muted blue */
+  --light-beige: #9DB4C0;  /* soft pastel blue */
+  --white: #FFFFFF;        /* giữ nguyên */
+  --cream-bg: #E5E9F0;     /* cool light grey */
+  --yellow-accent: #00D1D1;/* teal accent */
+}
+
 
         body {
             background: var(--cream-bg);
