--- a/mockup-trend-analyzer.html
+++ b/mockup-trend-analyzer.html
@@ -20,7 +20,7 @@
 }
 
 
-    .nav a.active {
+   /*  .nav a.active {
       background-color: var(--yellow-accent);
       color: var(--darkest);
       font-weight: 600;
@@ -31,7 +31,7 @@
       padding: 0;
       box-sizing: border-box;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+    } */
 
     body {
       background-color: #f8f9fa;
@@ -208,6 +208,10 @@
       .panel {
         grid-template-columns: 1fr;
       }
+
+      .main {
+        padding: 16px;
+      }
     }
 
     @media (max-width: 768px) {
@@ -218,16 +222,82 @@
       .sidebar {
         width: 100%;
         padding: 16px;
+        order: -1;
+      }
+
+      .main {
+        padding: 12px;
       }
 
       .nav {
-        flex-direction: row;
         overflow-x: auto;
         padding-bottom: 8px;
       }
 
       .nav a {
         white-space: nowrap;
+        padding: 8px 12px;
+        font-size: 0.9rem;
+      }
+
+      .panel {
+        gap: 16px;
+      }
+
+      .chart-card {
+        padding: 16px;
+      }
+
+      .risk-card {
+        min-height: auto;
+      }
+
+      .hamburger {
+        display: block;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .main {
+        padding: 8px;
+      }
+
+      .chart-card {
+        padding: 12px;
+        border-radius: 8px;
+      }
+
+      .chart-card h3 {
+        font-size: 0.95rem;
+        margin-bottom: 12px;
+      }
+
+      .charts-grid {
+        grid-template-columns: 1fr;
+        gap: 12px;
+      }
+
+      .risk-card {
+        padding: 16px;
+        border-radius: 12px;
+      }
+
+      .risk-card h3 {
+        font-size: 1.1rem;
+      }
+
+      .risk-card button {
+        padding: 12px 16px;
+        font-size: 0.9rem;
+      }
+
+      .panel {
+        gap: 12px;
+      }
+
+      .nav a {
+        padding: 6px 8px;
+        font-size: 0.8rem;
       }
     }
   </style>
